Updates search script.
- Adds work Lunr search to support query strings, avoid data redundancy;
- Adds checks for entry metadata, only display things like author,
categories, and date if those values actually exist;

Fixes #541, in some ways I suppose.

--- a/pages/search.html
+++ b/pages/search.html
@@ -4,14 +4,10 @@ title: Search
 permalink: /search/
 nav: true
 ---
-<br/>&nbsp;
-<form action="get" id="site_search">
+<form method="get" action="" id="site_search">
 <center>
-  <input style="font-size:20px;" type="text" id="search_box">
+  <input style="font-size:20px;" type="text" name="keywords" id="search_box">
   <input style="font-size:20px;" type="submit" value="Go!">
 </center>
 </form>
-<br/>&nbsp;
-<br/>&nbsp;
-
 <ul id="search_results"></ul>
