--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -40,7 +40,7 @@ order: 8
       <span>Thursdays:</span>1-9pm<br/>
       <span>Fridays:</span>1-5pm
     </div>
-    <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions.</div>
+    <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for Labor Day, Fall Break, and Thanksgiving.</div>
   </div>
 
   <div class="makerspace__people">
