Added new policy

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -84,9 +84,17 @@ order: 8
             <li>if you need help preparing a 3D model for printing,</li>
             <li>a brief description of the item you are printing or URL to object from a website (thingiverse.com, etc).</li>
         </ol>
-        
-        <p><strong>You will lose your print time if you do not show up within the first 15 minutes of your scheduled time.</strong></p>
-            <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
+ 
+        <p>By making a reservation, you agree to the following:</p>
+<ul>
+<li>You must schedule a printer and your print must be approved in advance of printing. Items that may not be printed include but are not limited to: models which are defective or unsuited for FDM printing, models of weapons and their accessories, copyrighted materials, or items designed for mass production and/or commercial use. Staff technologists reserve the right to cancel or refuse a print at any time.</li>
+<li>Unscheduled printers can be reserved by walk-ins on a first-come first-served basis.</li>
+<li>If you do not arrive within 15 minutes of the start of your of reservation, **you may lose your print time**.</li>
+<li>You must regularly monitor your print, and be available to remove it before the Makerspace closes.  Prints cannot run outside of staffed hours.</li>
+<li>Makerspace printers are intended for educational and experimentation purposes. Priority will be given to the UVA community users. Printing is currently free, but the staff reserves the right to ask users to supply their own filament for ongoing or large jobs.</li>
+</ul>           
+
+        <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
       </div>
   </div>
   <div class="makerspace__inventory">
