--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -26,7 +26,7 @@ order: 8
     <div class="maker-ethos__title">Ethos</div>
     <div class="maker-ethos__text">
       <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing, sewing, physical computing, and augmented reality. <strong>Open to everyone</strong>&mdash;absolutely no prior experience or fee needed!&mdash;we specialize in hands-on approaches to research questions in the humanities and arts.</p>
-      <p>Informed by a rich tradition of Library support for exploring materiality in <a href="http://smallnotes.library.virginia.edu/">Special Collections</a> and the Fine Arts Library <a href="http://uvamagazine.org/articles/the_tactile_library">Materials Collection</a>, and for participating in the physical-made-digital in both the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a href="http://www.library.virginia.edu/blog/libraries/dml/">Digital Media Lab</a> in Clemons, our Makerspace Technologists can help faculty and student researchers evaluate new approaches to their work, and consider both the hows and the whys of making.</p>
+      <p>Informed by a rich tradition of Library support for exploring materiality in <a href="http://smallnotes.library.virginia.edu/">Special Collections</a> and the Fine Arts Library <a href="http://uvamagazine.org/articles/the_tactile_library">Materials Collection</a>, and for participating in the physical-made-digital in both the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a href="https://www.library.virginia.edu/hours#robertson-media-center">Robertson Media Center</a> in Clemons, our Makerspace Technologists can help faculty and student researchers evaluate new approaches to their work, and consider both the hows and the whys of making.</p>
       <p>Learning <i>how</i> to do something with humanities technology gives us a more informed perspective on <i>why</i> we do things in the humanities. <strong>Both are vital.</strong></p>
     </div>
   </div>
@@ -84,16 +84,15 @@ order: 8
             <li>if you need help preparing a 3D model for printing,</li>
             <li>a brief description of the item you are printing or URL to object from a website (thingiverse.com, etc).</li>
         </ol>
- 
-        <p>By making a reservation, you agree to the following:</p>
+        <h2>Makerspace Rules of Use</h2> 
+        <p>You must schedule a printer and your print must be approved in advance of printing. By making a reservation, you agree to the following:</p>
 <ul>
-<li>You must schedule a printer and your print must be approved in advance of printing. Items that may not be printed include but are not limited to: models which are defective or unsuited for FDM printing, models of weapons and their accessories, copyrighted materials, or items designed for mass production and/or commercial use. Staff technologists reserve the right to cancel or refuse a print at any time.</li>
-<li>Unscheduled printers can be reserved by walk-ins on a first-come first-served basis.</li>
-<li>If you do not arrive within 15 minutes of the start of your of reservation, **you may lose your print time**.</li>
-<li>You must regularly monitor your print, and be available to remove it before the Makerspace closes.  Prints cannot run outside of staffed hours.</li>
-<li>Makerspace printers are intended for educational and experimentation purposes. Priority will be given to the UVA community users. Printing is currently free, but the staff reserves the right to ask users to supply their own filament for ongoing or large jobs.</li>
+<li>Items that may not be printed include but are not limited to: models which are defective or unsuited for FDM printing, models of weapons and their accessories, copyrighted materials, or items designed for mass production and/or commercial use. Staff technologists reserve the right to cancel or refuse a print at any time.</li>
+  <li>Unscheduled printers can be reserved by walk-ins on a first-come first-served basis.</li>
+  <li>If you do not arrive within 15 minutes of the start of your of reservation, you may lose your print time.</li>
+  <li>You must regularly monitor your print, and be available to remove it before the Makerspace closes.  Prints cannot run outside of staffed hours.</li>
+  <li>Makerspace printers are intended for educational and experimentation purposes. Priority will be given to the UVA community users. Printing is currently free, but the staff reserves the right to ask users to supply their own filament for ongoing or large jobs.</li>
 </ul>           
-
         <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
       </div>
   </div>
