--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ title: Home
 				{% endfor %}
 <!-- open office hours: -->	
 <div>		
-				<h2>Open Office Hours?</h2>
+				<h2>Open Office Hours</h2>
 				<ul>
 				<li><span>When:</span> 10-11:30am Wednesdays, during fall and spring term</li>
 				<li><span>Where:</span> Scholars' Lab's <a href="/hours-and-spaces/#the-common-room">discussion area</a> just inside our Common Room.</li>
