--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -57,7 +57,6 @@ order: 6
 		<div class="spatial-mission__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
-			<p>[What we specialize in.][Our expert staff can help you with XYZ.]</p>
 			<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, our own <a href="http://neatline.org">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
 		</div>
 	</div>
@@ -79,28 +78,16 @@ order: 6
 				<li>Hours: by appointment</li>
 				<li>Office: by appointment</li>
 			</ul>
-			<ul class="spatial-starting__gis">
-			<h3>Resources</h3>
-			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/c.php?g=514920&p=3520109">GIS Lib Guide</a></li>
-			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
-			</ul>
 		</div>
 	</div>
 
 	<div class="spatial__faq">
-		<div class="spatial-faq__title">Frequently<br/>Asked<br/>Questions</div>
-		<div class="spatial-faq__subtitle">[Subtitle, if desired.]</em></div>
+		<div class="spatial-faq__title">Resources</div>
 		<ul class="spatial-faq__list">
-			<!-- extra spaces b/t them so more readable code until we fill stuff in: -->
-			<li><img src="{{ 'assets/img/svg/asterisk-2.svg' | relative_url }}" alt="asterisk drawing" style="height:20px;width:20px"> <span>What are spatial technologies?</span>[Answer XYZ, e.g. "Our Spatial Technologies team combines overlapping expertise in GIS, cultural heritage informatics, and other methods of exploring space and place."]</li>
-
-			<li><span>[Another question]</span> [Answer XYZ]</li>
-
-			<li><span>[Another question]</span>[Answer XYZ]</li>
-
-			<li><span>[Another question]</span>[Answer XYZ]</li>
-
-			<li><span>[Another question]</span>[Answer XYZ]</li>
+			<ul class="spatial-starting__gis">
+			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/c.php?g=514920&p=3520109">GIS Lib Guide</a></li>
+			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
+			</ul>
 		</ul>
 	</div>
 	<div class="spatial__inventory">
