--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -177,10 +177,10 @@ order: 6
 		<ul class="spatial-people__list">
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
-			{% if person.name == 'Will Rourk' or person.name == 'Arin Bennett' or person.name == 'Chris Gist' or person.name == 'Drew Macqueen' or person.name == 'Cho Jiang' %}
+			{% if person.title == 'Will Rourk' or person.title == 'Arin Bennett' or person.title == 'Chris Gist' or person.title == 'Drew Macqueen' or person.title == 'Cho Jiang' %}
 			<li class="spatial-people__person">
-				<div class="spatial-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.name }}"></div>
-				<div class="spatial-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.name }}</a></div> <!-- link to their page -->
+				<div class="spatial-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.title }}"></div>
+				<div class="spatial-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.title }}</a></div> <!-- link to their page -->
 				<div class="spatial-person__position">{{ person.position }}</div>
 			</li>
 			{% endif %}
