Changes from Alison's feedback...
- links "all fields" to FAQ listing all fields we cover
- swaps first appearance of redundant word "approaches" (ends both of top paragraphs) to "thinking" instead

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 		<div class="home-landing__hero-text">
 			<div class="home-hero__hook">
 				<h3>What We Do</h3>
-				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in all fields, informed by digital humanities, spatial technologies, & cultural heritage approaches.</p>
+				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in <a href="http://scholarslab.org/about/#what-academic-fields-do-you-support">all fields</a>, informed by digital humanities, spatial technologies, & cultural heritage thinking.</p>
 				<p>We offer mentoring, collaboration, & a safe space for anyone curious about learning to push disciplinary & methodological boundaries through new approaches.</p>
 			</div>
 			<div class="home-hero__description">
