--- a/index.html
+++ b/index.html
@@ -154,17 +154,7 @@ title: Home
 				</div>
 				{% endfor %}
 <!-- open office hours: -->	
-<div>		
-				<h2>Open Office Hours</h2>
-				<ul>
-				<li><span>When:</span> 10-11:30am Wednesdays, during fall and spring term</li>
-				<li><span>Where:</span> Scholars' Lab's <a href="/hours-and-spaces/#the-common-room">discussion area</a> just inside our Common Room.</li>
-				Come chat with our experts about anything, from your getting started through advanced projects.
-				</ul>
-				<div class="events-item__cta">
-				<a href="/hours-and-spaces/#the-common-room">Location &rsaquo;</a>
-</div>
-			</div>
+{% include open-office-hours.html %}
 			<div class="home-events__cta"><a href="/events">All events</a></div>
 		</section>
 
