--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ title: Home
 					    <div id="mc_embed_signup_scroll">
 						<h2>Scholars' Lab Newsletter</h2>
 					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address </label>
+						<label for="EMAIL">Email Address </label>
 						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 					</div>
 						<div id="mce-responses" class="clear">
