--- a/pages/events.html
+++ b/pages/events.html
@@ -21,7 +21,7 @@ notes:
             {% assign today = site.time | date: '%Y%m%d' | plus:0 %}            
 			<!-- event layout: -->
 			{% for event in events %}
-            {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
+            {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}            
             {% if eventdate > today %}
 			<section class="events-gallery__item">
 				<div class="events-item__date">
@@ -54,16 +54,29 @@ notes:
             {% endif %}
 			{% endfor %} <!-- end event -->
 		</div> <!-- end gallery -->
-        <h2>Previous Events</h2>
-        <ul>
-            {% for event in events reversed %}
-            {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
-            {% if eventdate < today %}
-            <li>
-                <a href="{{ site.url }}/events/{{ event.slug }}">{{ event.title }}</a> ({{ event.start_date | date: "%A, %B %-d, %Y" }})
-            </li>
-            {% endif %}
-            {% endfor %} <!-- end event -->
-        </ul>
-	</div> <!-- end main content -->
+
+<h2>Previous Events</h2>
+
+<ul class="page-previous_posts">
+{% for event in events reversed %}
+
+  {% assign currentdate = event.start_date | date: "%Y" %}
+  {% if currentdate != date %}
+    {% unless forloop.first %}</ul>{% endunless %}
+    <h3>{{ currentdate }}</h3>
+    <ul>
+    {% assign date = currentdate %}
+  {% endif %}
+  
+<li>
+<a href="{{ site.url }}/events/{{ event.slug }}">{{ event.title }}</a> ({{ event.start_date | date: "%A, %B %-d, %Y" }})
+</li>
+  {% if forloop.last %}</ul>{% endif %}
+
+
+{% endfor %}
+</ul>
+
+</ul>
+</div> <!-- end main content -->
 </div> <!-- end wrapper -->
