--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
 		<section class="home__library">
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
-				<a href="http://library.virginia.edu" class="uva-library-logo-link"><img src="/assets/img/decorative/uvalibrary-logo-250px.png" alt=""></a>
+				<a href="http://library.virginia.edu" class="uva-library-logo-link"><img src="/assets/img/decorative/uvalibrary-logo-250px.png" alt="University of Virginia Library"></a>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
 				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://library.virginia.edu">UVA Library's main website</a>.</p>
@@ -84,14 +84,14 @@ title: Home
 					    <div id="mc_embed_signup_scroll">
 						<h2>Scholars' Lab Newsletter</h2>
 					<div class="mc-field-group">
-						<label for="EMAIL">Email Address </label>
+						<label for="mce-EMAIL">Email Address </label>
 						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 					</div>
 						<div id="mce-responses" class="clear">
 							<div class="response" id="mce-error-response" style="display:none"></div>
 							<div class="response" id="mce-success-response" style="display:none"></div>
 						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value=""></div>
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
 					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 					    </div>
 					</form>
