Department of Redundancy Department

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ title: Home
 							<div class="response" id="mce-error-response" style="display:none"></div>
 							<div class="response" id="mce-success-response" style="display:none"></div>
 						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
 					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 					    </div>
 					</form>
