--- a/pages/people.html
+++ b/pages/people.html
@@ -31,7 +31,7 @@ nav: true
         {% for person in staff %}
         {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
         <div class="people-item-wrapper">
-          <a href="{{ site.url }}/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+          <a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
             <div class="people-item__img">
             {% if profile_pic == empty %}
               <img src="{{ site.baseurl }}/assets/img/people/grid/scholarslab.png" alt="Scholars' Lab Lab">
@@ -61,7 +61,7 @@ nav: true
         {% for person in students %}
         {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
         <div class="people-item-wrapper">
-          <a href="{{ site.url }}/people/{{ person.slug }}/" aria-label="{{ person.title }}">
+          <a href="/people/{{ person.slug }}/" aria-label="{{ person.title }}">
             <div class="people-item__img">
             {% if profile_pic == empty %}
               {% assign num = forloop.index | modulo:4 %}
@@ -107,7 +107,7 @@ nav: true
         {% for person in alumni %}
         {% assign profile_pic = site.static_files | where: "basename", person.slug | limit: 1 %}
         <div class="people-item-wrapper">
-          <a href="{{ site.url }}/people/{{ person.slug }}" aria-label="{{ person.title }}">
+          <a href="/people/{{ person.slug }}" aria-label="{{ person.title }}">
             <!-- image: -->
             <div class="people-item__img">
             {% if profile_pic == empty %}
