Initial pass at design tweaks

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ title: Home
 				<div class="home-student__cta"><a href="/for-students/">See all</a></div>
 				
 			</div>
-			<div class="home-student__img" title="Placeholder image"></div>
+			<div class="home-student__img-container" title="Placeholder image"><img src="{{ 'assets/img/decorative/for-students.jpg' | relative_url }}" id="for-students-image"></div>
 		</section>
 
 		<!-- makerspace -->
