Remove type from events page. Change absolute to relative link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ title: Home
 					<li data-fill="teal" data-name="offices"><span>Staff offices</span></li>
 				</ul>
 			</div>
-			<p class="home-hours__cta""><a href="/hours-and-spaces/" aria-label="hours and spaces page">All hours &amp; spaces</a></p>
+			<p class="home-hours__cta"><a href="/hours-and-spaces/" aria-label="hours and spaces page">All hours &amp; spaces</a></p>
 		</section>
 
 		<!-- events: -->
@@ -149,7 +149,7 @@ title: Home
 						<li><span>Where:</span> {{ event.location }}</li>
 					</ul>
 					<div class="events-item__cta">
-						<a href="{{ site.url }}/events/{{ event.slug }}/">Details &rsaquo;</a>
+						<a href="/events/{{ event.slug }}/">Details &rsaquo;</a>
 					</div>
 				</div>
 				{% endfor %}
