--- a/pages/events.html
+++ b/pages/events.html
@@ -28,7 +28,7 @@ notes:
 					<div>{{ event.start_date | date: "%b" }}<br/>{{ event.start_date | date: "%-d" }}</div>
 				</div>
 				<div class="events-item__title">
-					<a href="{{ site.url }}/events/{{ event.slug }}">{{ event.title }}</a>
+					<a href="/events/{{ event.slug }}">{{ event.title }}</a>
 				</div>
 				<!-- remove trailing seconds zeros on time -->
 				{% assign start_time = event.start_time | date: "%r" | remove: ":00 " %}
@@ -69,7 +69,7 @@ notes:
   {% endif %}
   
 <li>
-<a href="{{ site.url }}/events/{{ event.slug }}">{{ event.title }}</a> ({{ event.start_date | date: "%A, %B %-d, %Y" }})
+<a href="/events/{{ event.slug }}">{{ event.title }}</a> ({{ event.start_date | date: "%A, %B %-d, %Y" }})
 </li>
   {% if forloop.last %}</ul>{% endif %}
 
