--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -71,11 +71,11 @@ order: 6
 			</ul>
 			<ul class="spatial-starting__gis">
 				<h3>GIS staff availability</h3>
-				Chris Gist and Drew Macqueen
+				<li>Staff: Chris Gist and Drew Macqueen</li>
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff</h3>
-				Will Rourk and Arin Bennett
+				<li>Staff: Will Rourk and Arin Bennett</li>
 				<li>Hours: by appointment</li>
 				<li>Office: Clemons 3rd Floor (DML wing)</li>
 			</ul>
