--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -74,7 +74,7 @@ order: 6
 				<li>Staff: Chris Gist and Drew Macqueen</li>
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
-				<h3>Cultural heritage informatics staff</h3>
+				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
 				<li>Hours: by appointment</li>
 				<li>Office: Clemons 3rd Floor (DML wing)</li>
