--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -127,7 +127,7 @@ order: 6
 		  <ul class="maker-list__wearables">
 			  <span><a href="https://guides.lib.virginia.edu/gis/data">GIS data</a></span>
 		    <li>Shared Drive</li>
-		    <li>Open Data Portal</li>
+		    <li><a href="http://data-uvalibrary.opendata.arcgis.com/">Open Data Portal</a></li>
 		  </ul>
 		  <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
 		  <ul class="maker-list__wearables">
