--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -83,14 +83,24 @@ order: 6
 	</div>
 
 	<div class="spatial__faq">
-		<div class="spatial-faq__title">Resources</div>
+		<div class="spatial-faq__title">GIS</div>
 		<ul class="spatial-faq__list">
 			<ul class="spatial-starting__gis">
-			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/gis">GIS Lib Guide</a></li>
-			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
+			<li><span>University support of GIS:</span> See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
+				<li><span>GIS workshop series:</span> We offer a series of friendly, jargon-free workshops every academic term. You can read more <a href="https://scholarslab.org/blog/gis-workshops-spring-2019/">our Spring 2019 workshops</a>.</li>
+				<li><a href="http://guides.lib.virginia.edu/gis">GIS research page</a></li>
+				<li><a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a></li>
+				<li></li>
+			</ul>
+		</ul>
+		<div class="spatial-faq__title">Cultural Heritage Informatics</div>
+		<ul class="spatial-faq__list">
+			<ul class="spatial-starting__gis">
+			<li><span>Cultural heritage informatics at UVA:</span> Visit our <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
 			</ul>
 		</ul>
 	</div>
+	
 	<div class="spatial__inventory">
 		<div class="spatial-inventory__title">Tools, Data, Equipment</div> <!-- placeholder title -->
 <p>* = by appointment/request only. ^ = not distributed</p>
