--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -88,8 +88,7 @@ order: 6
 			<ul class="spatial-starting__gis">
 			<li><span>University support of GIS:</span> See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
 				<li><span>GIS workshop series:</span> We offer a series of friendly, jargon-free workshops every academic term. You can read more <a href="https://scholarslab.org/blog/gis-workshops-spring-2019/">our Spring 2019 workshops</a>.</li>
-				<li><a href="http://guides.lib.virginia.edu/gis">GIS research page</a></li>
-				<li><a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a></li>
+				<li>See also the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a>.</li>
 				<li></li>
 			</ul>
 		</ul>
