--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -86,16 +86,18 @@ order: 6
 		<div class="spatial-faq__title">GIS</div>
 		<ul class="spatial-faq__list">
 			<ul class="spatial-starting__gis">
-			<li><span>University support of GIS:</span> See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
-				<li><span>GIS workshop series:</span> We offer a series of friendly, jargon-free workshops every academic term. You can read more <a href="https://scholarslab.org/blog/gis-workshops-spring-2019/">our Spring 2019 workshops</a>.</li>
-				<li>See also the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a>.</li>
-				<li></li>
+			<h3>University support of GIS</h3>
+			<li>See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
+			<li>Our GIS resources include the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a> and the <a href="https://geoportal.lib.virginia.edu/UVAImageDiscovery/">UVA Image Discovery Tool</a>.</li>
+			<h3>GIS workshop series</h3>
+			<li>We offer a series of friendly, jargon-free workshops each fall and spring. You can read more about our <a href="https://scholarslab.org/blog/gis-workshops-spring-2019/">Spring 2019 workshops here</a>.</li>
 			</ul>
 		</ul>
 		<div class="spatial-faq__title">Cultural Heritage Informatics</div>
 		<ul class="spatial-faq__list">
 			<ul class="spatial-starting__gis">
-			<li><span>Cultural heritage informatics at UVA:</span> Visit our <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
+			<h3>Cultural heritage informatics at UVA</h3> 
+			<li>Visit our <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
 			</ul>
 		</ul>
 	</div>
