--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -33,7 +33,7 @@ order: 3
 
   <div class="makerspace__hours">
     <div class="maker-hours__title">Staffed Hours</div>
-    <p><strong>We are currently running modified hours. Check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</strong></p>
+    <p>You can also check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</strong></p>
     <div class="home-maker__hours"> <!-- NB: reused from homepage -->
       {% include makerspace-hours.html %}
     </div>
