Correct current/previous events lists. Fixes #683.
Adds a conditional to the previous events listing to remove events that
occur on the current date or a future date.

Corrects the events listing on the home page and on the events page
under *Upcoming Events* to include events scheduled for the current
date.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ title: Home
             {% assign today = site.time | date: '%Y%m%d' | plus:0 %}
             {% for event in allevents %}
                 {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
-                {% if eventdate > today %}
+                {% if eventdate >= today %}
                     {% assign events = events | push: event %}
                 {% endif %}
             {% endfor %}
