Fixed missing word, added words & copyable email

--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@ nav: false
 permalink: 404.html
 ---
 
-If you more help, <a href="mailto:scholarslab@virginia.edu">email us</a>!
+If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
