Links to search, FAQ, new repo issue, sitemap

--- a/404.html
+++ b/404.html
@@ -6,3 +6,9 @@ permalink: 404.html
 ---
 
 If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
+
+You can use our [search page](/search/) to navigate this website, or peruse our [site map](/sitemap/) listing all of the site's static pages.
+
+We also maintain an [FAQ page](/about/) covering common questions about the Scholars' Lab.
+
+If you're comfortable with GitHub, you can [add an issue](https://github.com/scholarslab/scholarslab.org/issues/new) to this website's repo if you think a link or other site feature is broken.
