--- a/404.html
+++ b/404.html
@@ -7,8 +7,41 @@ permalink: 404.html
 
 If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
 
+## Navigate
 You can use our [search page](/search/) to navigate this website, or peruse our [site map](/sitemap/) listing all of the site's static pages.
 
-We also maintain an [FAQ page](/about/) covering common questions about the Scholars' Lab.
+##Learn
+We maintain an [FAQ page](/about/) covering common questions about the Scholars' Lab.
 
+<div class="home-contact__newsletter">
+					<div>
+					<!-- Begin MailChimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						#mc_embed_signup{background:#fff; clear:left; width:300px;}
+					</style>
+					<div id="mc_embed_signup">
+					<form action="https://virginia.us1.list-manage.com/subscribe/post?u=3ac105f4d87dddbd34542ab41&amp;id=25120106cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+						<h2>Scholars' Lab Newsletter</h2>
+					<div class="mc-field-group">
+						<label for="mce-EMAIL">Email Address </label>
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
+					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					    </div>
+					</form>
+					</div>
+					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+					<!--End mc_embed_signup-->
+					</div> <!-- end signup wrapper -->
+				</div> <!-- end newsletter -->
+			</div> <!-- end contact content -->
+
+## Improve
 If you're comfortable with GitHub, you can [add an issue](https://github.com/scholarslab/scholarslab.org/issues/new) to this website's repo if you think a link or other site feature is broken.
