--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@ permalink: 404.html
 
 If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
 
-## Navigate
+<h2>Navigate</h2>
 You can use our [search page](/search/) to navigate this website, or peruse our [site map](/sitemap/) listing all of the site's static pages.
 
-##Learn
+<h2>Learn</h2>
 We maintain an [FAQ page](/about/) covering common questions about the Scholars' Lab.
 
 <div class="home-contact__newsletter">
@@ -43,5 +43,5 @@ We maintain an [FAQ page](/about/) covering common questions about the Scholars'
 				</div> <!-- end newsletter -->
 			</div> <!-- end contact content -->
 
-## Improve
+<h2>Improve</h2>
 If you're comfortable with GitHub, you can [add an issue](https://github.com/scholarslab/scholarslab.org/issues/new) to this website's repo if you think a link or other site feature is broken.
