--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@ permalink: 404.html
 If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
 
 <h2>Navigate</h2>
-You can use our [search page](/search/) to navigate this website, or peruse our [site map](/sitemap/) listing all of the site's static pages.
+You can use our <a href="/search">search page</a> to navigate this website, or peruse our <a href="/sitemap">site map</a> listing all of the site's static pages.
 
 <h2>Learn</h2>
-We maintain an [FAQ page](/about/) covering common questions about the Scholars' Lab.
+We maintain an <a href="/about">FAQ page</a> covering common questions about the Scholars' Lab.
 
 <div class="home-contact__newsletter">
 					<div>
@@ -44,4 +44,4 @@ We maintain an [FAQ page](/about/) covering common questions about the Scholars'
 			</div> <!-- end contact content -->
 
 <h2>Improve</h2>
-If you're comfortable with GitHub, you can [add an issue](https://github.com/scholarslab/scholarslab.org/issues/new) to this website's repo if you think a link or other site feature is broken.
+If you're comfortable with GitHub, you can <a href="https://github.com/scholarslab/scholarslab.org/issues/new">add an issue</a> to this website's repo if you think a link or other site feature is broken.
