--- a/404.html
+++ b/404.html
@@ -34,4 +34,6 @@ We maintain an <a href="/about">FAQ page</a> covering common questions about the
 			</div> <!-- end contact content -->
 
 <h2>Improve</h2>
-If you're comfortable with GitHub, you can <a href="https://github.com/scholarslab/scholarslab.org/issues/new">add an issue</a> to this website's repo if you think a link or other site feature is broken.
+Found a bug, a project missing a collaborator's name, or have a feature or content request for ScholarsLab.org? Please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu so we can follow up.
+
+If you're comfortable with GitHub, you can instead <a href="https://github.com/scholarslab/scholarslab.org/issues/new">add an issue</a> to this website's repo if you think a link or other site feature is broken.
