--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ If you would like more help, please <a href="mailto:scholarslab@virginia.edu">em
 You can use our <a href="/search">search page</a> to navigate this website, or peruse our <a href="/sitemap">site map</a> listing all of the site's static pages.
 
 <h2>Learn</h2>
-We maintain an <a href="/about">FAQ page</a> covering common questions about the Scholars' Lab.
+We maintain an <a href="/about">FAQ page</a> covering common questions about the Scholars' Lab, and our <a href="/work">work page</a> shares information on various projects and other chunks of work we've done.
 
 <h2>Scholars' Lab Newsletter</h2>
 <div class="mc-field-group">
