Changed Makerspace hours intro language

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ title: Home
 		<!-- makerspace -->
 		<section class="home__makerspace">
 			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
-			<p><strong>We are currently running modified hours. Check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</strong></p>
+			<p><strong>Please check our calendar below for up-to-date availability.</strong></p>
 			<div class="home-maker__hours">
 			<div>Staffed Hours</div>
 			{% include makerspace-hours.html %}
