--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@ title: Home
 		<!-- makerspace -->
 		<section class="home__makerspace">
 			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
-			<p>Please check our calendar below for up-to-date availability.</p>
+			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
 			<div class="home-maker__hours">
 			<div>Staffed Hours</div>
 			{% include makerspace-hours.html %}
-			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See below for our full hours calendar.</p>
 			</div>
 			<div class="home-maker__text">
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
